EEVEE: Baking Indirect lighting crashes Blender. #85603

Closed
opened 2021-02-13 12:26:23 +01:00 by Wykrhm Reddy · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-12 22:08, hash: 1065b413ed
Worked: 2.92 beta
Caused by 000a340afa

Short description of error
Baking indirect lighting crashes Blender.

Exact steps for others to reproduce the error

  1. Start Blender.
  2. Create object.
  3. Create light.
  4. Bake Indirect Lighting.
  5. Crash.

#85603.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-12 22:08, hash: `1065b413ed` Worked: 2.92 beta Caused by 000a340afa **Short description of error** Baking indirect lighting crashes Blender. **Exact steps for others to reproduce the error** 1. Start Blender. 2. Create object. 3. Create light. 4. Bake Indirect Lighting. 5. Crash. [#85603.blend](https://archive.blender.org/developer/F9807877/T85603.blend)
Author

Added subscriber: @Wyk

Added subscriber: @Wyk

#85767 was marked as duplicate of this issue

#85767 was marked as duplicate of this issue

#85718 was marked as duplicate of this issue

#85718 was marked as duplicate of this issue

#85719 was marked as duplicate of this issue

#85719 was marked as duplicate of this issue
Author

Not fixed in today's build. Thought I'll add in a crash Log: blender.crash.txt

Not fixed in today's build. Thought I'll add in a crash Log: [blender.crash.txt](https://archive.blender.org/developer/F9798906/blender.crash.txt)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking.

Can confirm, checking.
Member

This is also caused by 000a340afa

This is also caused by 000a340afa

Added subscriber: @geocentric_wage

Added subscriber: @geocentric_wage
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Member

Added subscriber: @leonardos

Added subscriber: @leonardos
Member

Added subscriber: @jackdaw

Added subscriber: @jackdaw

This issue was referenced by 48167644b7

This issue was referenced by 48167644b7e9798ed7a38ffd5f7324fd99007900

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-02-21 01:34:19 +01:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85603
No description provided.