Fix T85603 EEVEE: Baking Indirect lighting crashes Blender

Was caused by non initialized render_timesteps.